# Difference-generator

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: python_ci.yml
gendiff/: __init__.py  cli.py  gendiff.py
gendiff/file_operations/: data_loader.py  diff.py  file_parser.py  gendiff.py
gendiff/formats/: json_.py  plain.py  rendering.py  stylish.py
gendiff/scripts/: engine.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: json_attached.txt
tests/fixtures/output_files/: json_.txt  json_attached.txt
