[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Program, that determines the difference between two data structures"
authors = ["danilduborezov <95632838+ygracoord@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.10.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gen_diff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
